--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web
-@using Web.MVC.Constants
+﻿@using Web.MVC.Constants
 @model Web.MVC.Models.ApiResponses.CustUserResponses.UserResponse
 
 <div class="text-center">
