Add user role displaying

--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -4,6 +4,7 @@
 <div class="text-center">
     <div>
         <p>Имя пользователя: @Model.UserName</p>
+        <p>Роль: @ViewBag.UserRole</p>
         <p>Зарегистрирован: @Model.RegisteredAt</p>
         <p>Создано обсуждений: @Model.Posts</p>
         <p>Ответов: @Model.Answers</p>
