--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
@@ -13,13 +13,13 @@
 @if (ViewBag.CurrentPageNumber != 1)
 {
     <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.CurrentPageNumber - 1" asp-route-pageSize="@ViewBag.CurrentPageSize">
-        < Назад
+        &lt; Назад
     </a>
 }
 @if (ViewBag.DoesNextPageExist)
 {
     <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.CurrentPageNumber + 1" asp-route-pageSize="@ViewBag.CurrentPageSize">
-        Вперед >
+        Вперед &gt;
     </a>
 }
     
