--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
@@ -2,23 +2,31 @@
 
 
 <h3>Пользователи</h3>
-<table>
-    <tr><th>Имя пользователя</th><th>Почта</th><th>Подтверждена почта</th></tr>
-    @foreach (var user in Model)
-    {
-        <tr><th>@user.UserName</th><th>@user.Email</th><th>@user.EmailConfirmed</th></tr>
-    }
-</table>
-
-@if (ViewBag.CurrentPageNumber != 1)
+@if (Model.Count == 0)
 {
-    <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.CurrentPageNumber - 1" asp-route-pageSize="@ViewBag.CurrentPageSize">
+    <h5>Список пользователей пуст</h5>
+}
+else
+{
+    <table>
+        <tr><th>Имя пользователя</th><th>Почта</th><th>Подтверждена почта</th></tr>
+        @foreach (var user in Model)
+        {
+            <tr><th>@user.UserName</th><th>@user.Email</th><th>@user.EmailConfirmed</th></tr>
+        }
+    </table>
+}
+
+
+@if (ViewBag.PreviousPageNumber != 0 && Model.Count != 0)
+{
+    <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize">
         &lt; Назад
     </a>
 }
-@if (ViewBag.DoesNextPageExist)
+@if (ViewBag.DoesNextPageExist && Model.Count != 0)
 {
-    <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.CurrentPageNumber + 1" asp-route-pageSize="@ViewBag.CurrentPageSize">
+    <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize">
         Вперед &gt;
     </a>
 }
