--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
@@ -4,6 +4,17 @@
 <h3>Пользователи</h3>
 @if (Model.Count == 0)
 {
+    var searchingTypes = new SelectList(new List<string>
+    {
+        UserSearchingTypeConstants.UserNameSearchingType, UserSearchingTypeConstants.EmailSearchingType
+    }, UserSearchingTypeConstants.UserNameSearchingType);
+    <form method="get">
+        <input name="searchingQuery" placeholder="Поиск" />
+        <input type="hidden" name="pageNumber" value="1" />
+        <input type="hidden" name="pageSize" value="@ViewBag.CurrentPageSize" />
+        <select name="searchingType" asp-items="@searchingTypes"></select>
+        <input type="submit" value="найти" />
+    </form>
     <h5>Список пользователей пуст</h5>
 }
 else
@@ -50,7 +61,7 @@ else
     else
     {
         <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize"
-           asp-route-searchingQuery="@ViewBag.SearchingQuery">
+           asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-searchingType="@ViewBag.SearchingType">
             &lt; Назад
         </a>
     }
@@ -66,7 +77,7 @@ else
     else
     {
         <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize"
-           asp-route-searchingQuery="@ViewBag.SearchingQuery">
+           asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-searchingType="@ViewBag.SearchingType">
             Вперед &gt;
         </a>
     }
