--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Topics.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Topics.cshtml
@@ -8,5 +8,17 @@
         <a href="~/topics/@topic.Name">@topic.Name</a>
         <p>Постов: @topic.PostsCount</p>
     }
+    @if (ViewBag.PreviousPageNumber != 0 && Model.Count != 0)
+    {
+        <a asp-controller="Topic" asp-action="Topics" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.PageSize">
+            Назад
+        </a>
+    }
+    @if (ViewBag.DoesNextPageExist && Model.Count != 0)
+    {
+        <a asp-controller="Topic" asp-action="Topics" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.PageSize">
+            Вперед
+        </a>
+    }
 </div>
 
