--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/GetAllTopicsSortedByPopularity.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/GetAllTopicsSortedByPopularity.cshtml
@@ -10,13 +10,13 @@
     }
     @if (ViewBag.PreviousPageNumber != 0 && Model.Count != 0)
     {
-        <a asp-controller="Topic" asp-action="Topics" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.PageSize">
+        <a asp-controller="Topic" asp-action="GetAllTopicsSortedByPopularity" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.PageSize">
             Назад
         </a>
     }
     @if (ViewBag.DoesNextPageExist && Model.Count != 0)
     {
-        <a asp-controller="Topic" asp-action="Topics" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.PageSize">
+        <a asp-controller="Topic" asp-action="GetAllTopicsSortedByPopularity" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.PageSize">
             Вперед
         </a>
     }
