--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
@@ -12,7 +12,7 @@
 <div>
     @foreach (var discussion in Model.Discussions)
     {
-        <a href="~/discussions/@discussion.Id">@discussion.Title</a>
+        <a asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@discussion.Id">@discussion.Title</a>
         <h6>Создано: @discussion.CreatedBy</h6>
         <h6>Рейтинг: @discussion.Rating</h6>
         <h6>Дата создания: @discussion.CreatedAt</h6>
@@ -23,7 +23,7 @@
 {
     @if (ViewBag.SearchingQuery is null)
     {
-        <a asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.PageSize"
+         <a asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.PageSize"
            asp-route-topicName="@Model.TopicName">
             Назад
         </a>
@@ -47,7 +47,7 @@
     }
     else
     {
-        <a asp-controller="Topic" asp-action="Topics" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.PageSize"
+        <a asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.PageSize"
            asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-topicName="@Model.TopicName">
             Вперед
         </a>
