--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/SomethingWentWrong.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/SomethingWentWrong.cshtml
@@ -2,6 +2,6 @@
 
 <div class="text-center">
     <h3>Что-то пошло не так, попробуйте ещё раз</h3>
-    <a href="~/discussions/@Model">к обсуждению</a>
+    <a asp-action="GetDiscussion" asp-controller="Discussion" asp-route-id="@Model">к обсуждению</a>
     <a asp-controller="Home" asp-action="Index">на главную</a>
 </div>
