--- a/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
@@ -1,9 +1,9 @@
 ﻿@using System.Web
-@model List<Web.MVC.Models.ApiResponses.ReportResponses.ReportApiResponse>
+@model GetReportsViewModel
 
 <div class="text-center">
     <h3>Жалобы</h3>
-    @if (Model.Count == 0)
+    @if (Model.Reports.Count == 0)
     {
         <h5>Жалоб нет</h5>
     }
@@ -11,7 +11,7 @@
     {
         <table>
             <tr><th>От пользователя</th><th>Причина</th><th>Тип</th></tr>
-            @foreach (var report in Model)
+            @foreach (var report in Model.Reports)
             {
                 if (report.ReportedCommentContent is null)
                 {
@@ -24,5 +24,19 @@
             }
         </table>
     }
-    
 </div>
+
+@if (ViewBag.PreviousPageNumber != 0 && Model.Reports.Count != 0)
+{
+    <a asp-controller="Report" asp-action="Reports" asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize"
+       asp-route-reportType="@Model.ReportType">
+        Назад
+    </a>
+}
+@if (ViewBag.DoesNextPageExist && Model.Reports.Count != 0)
+{
+    <a asp-controller="Report" asp-action="Reports" asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize"
+       asp-route-reportType="@Model.ReportType">
+        Вперед
+    </a>
+}
