--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetReportsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetReportsByUserName.cshtml
@@ -1,9 +1,9 @@
 ﻿@using System.Web
-@model System.Collections.Generic.List<Web.MVC.Models.ApiResponses.ReportResponses.ReportApiResponse>
+@model GetReportsViewModel
 
 <div class="text-center">
     <h3>Жалобы</h3>
-    @if (Model.Count == 0)
+    @if (Model.Reports.Count == 0)
     {
         <h5>Жалоб нет</h5>
     }
@@ -14,10 +14,10 @@
             <input type="submit" value="удалить все жалобы"/>
         </form>
         <a asp-controller="Moderator" asp-action="BanUser" asp-route-returnUrl="@Context.Request.Path" asp-route-userName="@ViewBag.ReportedByUserName"
-           >отстранить пользователя</a>
+        >отстранить пользователя</a>
         <table>
             <tr><th>От пользователя</th><th>Причина</th><th>Тип</th></tr>
-            @foreach (var report in Model)
+            @foreach (var report in Model.Reports)
             {
                 if (report.ReportedCommentContent is null)
                 {
@@ -30,5 +30,19 @@
             }
         </table>
     }
-    
 </div>
+
+@if (Model.PreviousPageNumber != 0 && Model.Reports.Count != 0)
+{
+    <a asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-userName="@ViewBag.ReportedByUserName"
+       asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize">
+        Назад
+    </a>
+}
+@if (Model.DoesNextPageExist && Model.Reports.Count != 0)
+{
+    <a asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-userName="@ViewBag.ReportedByUserName"
+       asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize">
+        Вперед
+    </a>
+}
