--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -21,7 +21,7 @@
             <a href="~/SuggestedTopics/@Model.UserName">предложенные темы</a><br/>
             <a href="~/Suggestions/Discussions/@Model.UserName">предложенные обсуждения</a><br/>
             <a href="~/Suggestions/Comments/@Model.UserName">предложенные комментарии</a><br/>
-            <a href="~/ReportsByUser/@Model.UserName">жалобы</a>
+            <a href="~/ReportsByUser/@Model.UserName?pageNumber=1&pageSize=20">жалобы</a>
             if (User.Identity.Name != Model.UserName)
             { 
                 <br/><br/> <a asp-controller="Moderator" asp-action="BanUser" asp-route-userName="@Model.UserName" asp-route-returnUrl="@Context.Request.Path"
