--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
     <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@Context.Request.Path">
         <input type="submit" value="выйти"/>
     </form>
+    <br/><a asp-controller="Moderator" asp-action="SuggestedTopics" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные темы</a><br/>
 }
 else
 {
