Update using namespace

--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussion.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Web.MVC.Constants
-@model Web.MVC.Models.ApiResponses.DiscussionResponse
+@model Web.MVC.Models.ApiResponses.Discussion.DiscussionResponse
 
 <h3>@Model.Title</h3>
 <p>@Model.Content</p>
