--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web
-@model List<Web.MVC.Models.ApiResponses.DiscussionResponse>
+@model List<Web.MVC.Models.ApiResponses.Discussion.DiscussionResponse>
 
 <div class="text-center">
     <h3>Предложенные обсуждения</h3>
